--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://wmreplyjobs.recruitee.com/o/product-owner-luton-contract-permanent'>
+      Product Owner - Luton - Contract & Permanent - WM Reply
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/oN0rbfw9'>Trek Bicycle Karrieren?Trip Design Product Manager</a></h5> 
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -78,7 +84,7 @@
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geckoboard/5d91d4f0-ccd8-4c83-9b79-dc13ff88c468'>Geckoboard - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/geckoboard/5d91d4f0-ccd8-4c83-9b79-dc13ff88c468'>Geckoboard - Product Manager</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -142,7 +148,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/huntergibbons/job/1tcdejbmpjfsd8op7g8jhjnyxc'>Technical Product Manager | Hunter Gibbons Career Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/huntergibbons/job/1tcdejbmpjfsd8op7g8jhjnyxc'>Technical Product Manager | Hunter Gibbons Career Portal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -158,7 +164,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/babylonhealth/746c734a-7eb1-4f16-977c-cbd2330dd6c6'>Babylon Health - Product Designer - Health Management</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/babylonhealth/746c734a-7eb1-4f16-977c-cbd2330dd6c6'>Babylon Health - Product Designer - Health Management</a></h5> 
 <p><span class="badge badge-light">UK - London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -178,7 +184,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698523615-senior-product-designer'>SmartRecruiters Inc Senior Product Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698523615-senior-product-designer'>SmartRecruiters Inc Senior Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -304,11 +310,11 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/icapitalnetwork/jobs/4489628002'>Job Application for Product Manager at iCapital Network</a></h5> 
+<h5><a href='https://boards.greenhouse.io/icapitalnetwork/jobs/4489628002'>Job Application for Product Manager at iCapital Network</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway  Oslo, Norway Houston, TXPalo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -324,7 +330,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -344,7 +350,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Rotterdam Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Allegro/743999698460929-international-sellers-product-manager'>Allegro International Sellers Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Allegro/743999698460929-international-sellers-product-manager'>Allegro International Sellers Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -368,7 +374,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -380,7 +386,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -450,11 +456,6 @@ innovation. In close partnership with sales, product marketing, content creators
 <p>Oct 22, 2019 ... We are looking for a product manager to own a portion of the Rackspace Data 
 Services product portfolio. You will manage the roadmap and feature set of one 
 or?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/o9aobfwC'>ServiceNow Careers - Principal Product Manager, Platform</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>18 hours ago ... We're looking for an experienced Principal Product Manager that wants to ... This 
-position reports to: Sr Manager of Product Management, Platform BU.</p>
 <hr/>
 
 
